objects/Awards__c.object
<CustomObject>
    <fields>
        <fullName>Award_File__c</fullName>
        <formula>CASE(  Award_Type_Detail__c , 
&quot;Bronze&quot;, &quot;cup_Bronze.png&quot;, 
&quot;Silver&quot;, &quot;cup_Silver.png&quot;, 
&quot;Gold&quot;, &quot;cup_Gold.png&quot;, 
&quot;Silver &amp; Blue&quot;, &quot;medal_BlueSilver.png&quot;, 
&quot;Silver &amp; Red&quot;, &quot;medal_RedSilver.png&quot;, 
&quot;Gold Striped&quot;, &quot;medal_StripeGold.png&quot;, 
&quot;Silver Striped&quot;, &quot;medal_RedSilver.png&quot;, 
&quot;Blue&quot;, &quot;ribbon_Blue.png&quot;, 
&quot;Red&quot;, &quot;ribbon_Red.png&quot;, 
&quot;Stripe&quot;, &quot;ribbon_Stripe.png&quot; , 
&quot;Medal_BlueSilver.png&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Award File</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Type_Detail__c</fullName>
        <label>Award Type Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Award_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver &amp; Blue</fullName>
                </value>
                <value>
                    <fullName>Silver &amp; Red</fullName>
                </value>
                <value>
                    <fullName>Gold Striped</fullName>
                </value>
                <value>
                    <fullName>Silver Striped</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Stripe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Award_Type__c</fullName>
        <label>Award Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cup</fullName>
                </value>
                <value>
                    <fullName>Medal</fullName>
                </value>
                <value>
                    <fullName>Ribbon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cup__c</fullName>
        <label>Cup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medal__c</fullName>
        <label>Medal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blue/Silver</fullName>
                </value>
                <value>
                    <fullName>Red/Silver</fullName>
                </value>
                <value>
                    <fullName>Striped/Gold</fullName>
                </value>
                <value>
                    <fullName>Striped/Silver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Great participation</fullName>
                </value>
                <value>
                    <fullName>100% attendance this week</fullName>
                </value>
                <value>
                    <fullName>Helped out another student</fullName>
                </value>
                <value>
                    <fullName>Helped teacher with task</fullName>
                </value>
                <value>
                    <fullName>Completed extra credit</fullName>
                </value>
                <value>
                    <fullName>Showed significant improvement</fullName>
                </value>
                <value>
                    <fullName>Was extra nice to a classmate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ribbon__c</fullName>
        <label>Ribbon</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Stripe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Awards</relationshipLabel>
        <relationshipName>Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medal</fullName>
                </value>
                <value>
                    <fullName>Cup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Award</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Award-{000000}</displayFormat>
        <label>Awards Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Awards</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>